Fix hero text on smaller height

--- a/styles/homepage/heropart.css
+++ b/styles/homepage/heropart.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-bottom: 35px;
 }
 
 .hero__text__capture {
@@ -33,7 +34,7 @@
 
 .hero__text__description {
   font-size: 16px;
-  margin-bottom: 100px;
+  margin-bottom: 10vh;
   max-width: 600px;
 }
 
